[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Register.gd" type="Script" id=1]

[node name="Register" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="EmailLabel" type="Label" parent="."]
margin_left = 160.0
margin_top = 190.0
margin_right = 214.0
margin_bottom = 206.0
text = "Email:"

[node name="Email" type="LineEdit" parent="EmailLabel"]
margin_left = -68.6831
margin_top = 20.0
margin_right = 121.317
margin_bottom = 53.0

[node name="UsernameLabel" type="Label" parent="."]
margin_left = 140.0
margin_top = 270.0
margin_right = 210.0
margin_bottom = 284.0
text = "Username:"

[node name="Username" type="LineEdit" parent="UsernameLabel"]
margin_left = -53.6755
margin_top = 26.195
margin_right = 136.324
margin_bottom = 59.195

[node name="PasswordLabel" type="Label" parent="."]
margin_left = 150.0
margin_top = 350.0
margin_right = 214.0
margin_bottom = 364.0
text = "Password:"

[node name="Password" type="LineEdit" parent="PasswordLabel"]
margin_left = -61.4173
margin_top = 23.299
margin_right = 128.582
margin_bottom = 56.2991
secret = true

[node name="ConfirmLabel" type="Label" parent="."]
margin_left = 120.0
margin_top = 424.956
margin_right = 238.0
margin_bottom = 438.956
text = "Confirm Password:"

[node name="Confirm" type="LineEdit" parent="ConfirmLabel"]
margin_left = -31.0
margin_top = 25.0
margin_right = 156.0
margin_bottom = 58.0
secret = true

[node name="Sign Up" type="Button" parent="."]
margin_left = 120.0
margin_top = 510.0
margin_right = 240.0
margin_bottom = 550.0
text = "Sign Up"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Back" type="Button" parent="."]
margin_left = 10.0
margin_top = 60.0
margin_right = 58.0
margin_bottom = 82.0
text = "Back"
[connection signal="button_up" from="Sign Up" to="." method="_on_Sign_Up_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="button_up" from="Back" to="." method="_on_Back_button_up"]
